<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorDeepGrey"
    tools:context="com.carpediemsolution.fitdiary.activity.NewFitActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_photo_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorDeepGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/calc_photo"
                    android:layout_width="match_parent"
                    android:layout_height="244dp"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_imageview" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/weight_now"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_margin="1dp"
                        android:background="@drawable/rectangle_imageview"
                        android:drawableLeft="@drawable/ic_weight"
                        android:drawablePadding="4dp"
                        android:hint="@string/weights"
                        android:padding="3dp"
                        android:textColor="#fff"
                        android:textColorHint="#FFFFFF"
                        android:textCursorDrawable="@drawable/cursor"
                        tools:ignore="LabelFor" />

                    <EditText
                        android:id="@+id/calories_now"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_margin="1dp"
                        android:background="@drawable/rectangle_imageview"
                        android:drawableLeft="@drawable/ic_food"
                        android:drawablePadding="4dp"
                        android:hint="@string/calories"
                        android:padding="3dp"
                        android:textColor="#fff"
                        android:textColorHint="#FFFFFF"
                        android:textCursorDrawable="@drawable/cursor"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/weight_date_new_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/rectangle_imageview"
                        android:drawableLeft="@drawable/ic_cal_date"
                        android:drawablePadding="4dp"
                        android:gravity="left|center_vertical"
                        android:padding="3dp"
                        android:text=""
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle_calories">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/linear"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="70dp"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/notes_now"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="top"
                                android:hint="@string/zametki"
                                android:padding="7dp"
                                android:textColor="@color/colorWhite"
                                android:textCursorDrawable="@drawable/cursor"
                                android:theme="@style/EditStyle"
                                tools:ignore="LabelFor" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_weight_write"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="15dp"
                        android:clickable="true"
                        app:backgroundTint="@color/colorDeepBlue" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_new_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="15dp"
                        android:layout_toLeftOf="@id/fab_weight_write"
                        android:clickable="true"
                        app:backgroundTint="@color/colorDeepOrange" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>

