<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorDeepGrey"
    tools:context="com.carpediemsolution.fitdiary.activity.CalculatorNewActivity">

         <android.support.v7.widget.CardView
            android:id="@+id/card_view_photo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorDeepGrey">

             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="3dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                >
                <ImageView
                    android:id="@+id/calc_photo"
                    android:layout_width="match_parent"
                    android:layout_height="244dp"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_imageview" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <AutoCompleteTextView
                    android:id="@+id/weight_now"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_margin="1dp"
                    android:padding="3dp"
                    android:background="@drawable/rectangle_imageview"
                    android:layout_toEndOf="@+id/calc_photo"
                    android:drawableLeft="@drawable/ic_weight"
                    android:textCursorDrawable="@drawable/cursor"
                    android:drawablePadding="4dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/weights"
                    android:textColor="#fff"
                    android:textColorHint="#FFFFFF"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/calories_now"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@+id/weight_now"
                    android:layout_margin="1dp"
                    android:padding="3dp"
                    android:layout_toEndOf="@+id/calc_photo"
                    android:background="@drawable/rectangle_imageview"
                    android:drawableLeft="@drawable/ic_food"
                    android:textCursorDrawable="@drawable/cursor"
                    android:drawablePadding="4dp"
                    android:hint="@string/calories"
                    android:textColor="#fff"
                    android:textColorHint="#FFFFFF"
                    tools:ignore="LabelFor" />
                <TextView
                    android:id="@+id/weight_date"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@+id/calories_now"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:padding="3dp"
                    android:gravity="left|center_vertical"
                    android:layout_toEndOf="@+id/calc_photo"
                    android:background="@drawable/rectangle_imageview"
                    android:drawableLeft="@drawable/ic_cal_date"
                    android:drawablePadding="4dp"
                    android:text=""
                    android:textColor="#FFFFFF" />
            </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle_calories">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/linear"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="70dp"
                    android:orientation="vertical">
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <EditText
                                android:id="@+id/notes_now"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="top"
                                android:padding="7dp"
                                android:hint="@string/zametki"
                                android:textColor="@color/colorWhite"
                                android:textCursorDrawable="@drawable/cursor"
                                android:theme="@style/EditStyle"
                                tools:ignore="LabelFor" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_weight_write"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="15dp"
                        android:clickable="true"
                        app:backgroundTint="@color/colorDeepBlue" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_new_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="15dp"
                        android:layout_toLeftOf="@id/fab_weight_write"
                        android:clickable="true"
                        app:backgroundTint="@color/colorDeepOrange" />
                </RelativeLayout>
            </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>

